# bep_project

./: .gitignore  CMakeLists.txt  README.md  benchmark_all.sh  build.sh  compile.sh  debug.sh  main  main.cpp  requirements.txt  results.txt  run_baseline.sh  run_eval.sh  run_hybrid.sh
apps/: cpu_baseline.cpp  eval_recall.cpp  hybrid_main.cpp  test_gpu.cpp
include/: data_loader.h  gpu_worker.cuh  hybrid_manager.h
include/hnswlib/: hnswalg.h
notebooks/: analysis.ipynb
results/: hybrid_benchmark_results.csv
scripts/: benchmark.py  data_generator.py
src/: data_loader.cpp  gpu_worker.cu  hybrid_manager.cpp
